Tor Browser 11.5.2 - August 23 2022
 * All Platforms
   * Update Tor to 0.4.7.10
   * Update NoScript to 11.4.9
 * Windows + macOS + Linux
   * Update Firefox to 91.13.0esr
   * Bug 27719: Treat unsafe renegotiation as broken [tor-browser]
   * Bug 40242: Tor Browser has two default bridges that share a fingerprint, and Tor ignores one [tor-browser]
   * Bug 41067: Cherry-pick fixes for HTTPS-Only mode [tor-browser]
   * Bug 41070: Google vanished from default search options from 11.0.10 onwards [tor-browser]
   * Bug 41075: The Tor Browser is showing caution sign but your document said it won't [tor-browser]
   * Bug 41089: Add tor-browser build scripts + Makefile to tor-browser [tor-browser]
   * Bug 41095: "Learn more" link in onboarding slideshow still points to 11.0 release post [tor-browser]
 * Build System
   * Windows + macOS + Linux
     * Update Go to 1.17.3
   * Android
     * Update Go to 1.18.5

Tor Browser 12.0a1 - August 9 2022
 * Windows + OS X + Linux
   * Update Firefox to 91.12.0esr
   * Update Tor-Launcher to 0.2.38
   * Update Translations
   * Update OpenSSL to 1.1.1q
   * Update Manual
   * Bug 21740: Make sure Mozilla's own emoji font on Windows/Linux does not interfere with our font fingerprinting defense [tor-browser]
   * Bug 27719: Treat unsafe renegotiation as broken [tor-browser]
   * Bug 40584: Update tor-browser manual to latest [tor-browser-build]
   * Bug 40966: Investigate problems with Twemoji Mozilla [tor-browser]
   * Bug 41011: The Internet and Tor status are visible when opening the settings [tor-browser]
   * Bug 41035: OnionAliasService should use threadsafe ISupports [tor-browser]
   * Bug 41036: Add a preference to disable OnionAlias [tor-browser]
   * Bug 41037: User onboarding still points to about:preferences#tor [tor-browser]
   * Bug 41044: Content exceeding the height of the connection settings modals [tor-browser]