@@ -69,7 +69,7 @@ buildconf:
   git_signtag_opt: '-s'
 
 var:
-  torbrowser_version: '11.5.2'
+  torbrowser_version: '11.5.3'
   torbrowser_build: 'build1'
   torbrowser_incremental_from:
     - 11.5.1
